--- a/src/App.css
+++ b/src/App.css
@@ -55,7 +55,7 @@ input:focus, button {
 
 /*Overlay thing from w3schools*/
 #loader {
-  background-color: #e8eef7;
+  background-color: #ffffff;
   position: fixed;
   display: none;
   width: 100%;
@@ -65,10 +65,22 @@ input:focus, button {
   right: 0;
   bottom: 0;
   z-index: 2;
-  cursor: pointer;
 }
 
-#loader > div {
+#lock {
+  background-color: #ffffff;
+  position: fixed;
+  display: block;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 2;
+}
+
+#loader > div, #lock > div {
   font-family: Myriad, serif;
   color: black;
   font-size: 25px;
